# procrastinate-course

./: README.md  compose.yaml  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.extend.yml
.github/workflows/: ci.yml
book/: index.html  llms.txt  robots.txt  sitemap.xml
book/assets/: book.js  style.css
book/chapters/: ch01.html  ch02.html  ch03.html  ch04.html  ch05.html  ch06.html  ch07.html  ch08.html  ch09.html  ch10.html  ch11.html  ch12.html  ch13.html
challenges/: conftest.py
challenges/ch01/: challenge.py  test_ch01.py
challenges/ch02/: challenge.py  test_ch02.py
challenges/ch03/: challenge.py  test_ch03.py
challenges/ch04/: challenge.py  test_ch04.py
challenges/ch05/: challenge.py  test_ch05.py
challenges/ch06/: challenge.py  test_ch06.py
deploy/: Dockerfile  ecs-task-definition.json  worker_app.py
examples/: ch01_lifecycle.py  ch03_blueprint_tasks.py  ch03_defer_options.py  ch04_worker_tour.py  ch05_retries.py  ch06_scheduling.py  ch07_locks.py  ch08_context_cancel_middleware.py  ch09_sync_defer.py  ch09_sync_tasks.py  ch11_testing.py  ch12_ops.py  ch12_worker_process.py  common.py  hello_world.py
notes/: adversarial-cross-check-part-1.json  adversarial-cross-check-part-2.json  adversarial-cross-check-part-3.json  adversarial-cross-check-part-4.json  controversial-claims.md  fact-check-manifest.json  research.md  run-adversarial.sh
scripts/: fill-deploy-tokens.py
solutions/: ch01.py  ch02.py  ch03.py  ch04.py  ch05.py  ch06.py  ch07.py  ch08.py  ch09.py  ch10.py  ch11.py  ch12.py  ch13.py
(+16 files in other folders)
