[project]
name = "procrastinate-course"
version = "0.1.0"
description = "A hands-on course on Procrastinate, the PostgreSQL-based distributed task queue for Python"
requires-python = ">=3.12"
dependencies = [
    "procrastinate>=3.9,<4",
    "psycopg[binary,pool]>=3.2",
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "httpx>=0.28",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=1.0",
    "ruff>=0.12",
    "mypy>=1.16",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["challenges"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
